# sailboatsfactory

./: 100.cse  README.md
data/: indices_calculados_sinfecha.csv  sample_data.csv
notebooks/distrib/: CHANGES.rst  LICENSE  data.py  hypersearch_lstm.py  lstm.py  lstm_ibex_konk.py  parameters.py  params.yaml  plot.py  predictor.py  setup.cfg  setup.py  stacked_lstm.py
notebooks/ensemble/: ridge_l2_regression.ipynb  ridge_l2_regression_model.ipynb  ridge_l2_regression_model.py
notebooks/experimental/: 2018_1yr_hourly.ipynb  compute.py  data.py  dtst.py  hyperparameter_search_trenderror.ipynb  hypersearch_lstm.py  hypersearch_trenderror.ipynb  konkordator.snb.ipynb  lstm ibex params.ipynb  lstm ibex.ipynb  lstm multivariate pipeline.ipynb  lstm multivariate.ipynb  lstm pred repsol.ipynb  lstm.py  lstm_ibex_konk.ipynb  lstm_ibex_konk.py  orthogonalization.numbers  output_4956.csv  output_4956.txt  output_9479.txt  parameters.py  params.yaml  params_2m.yaml  params_te0.05.yaml  params_te0.19.yaml  plot.py  save_and_load_test.py  serialization.ipynb  stacked_lstm.py  test.py
resources/: nn-core usage.md
resources/misc/: Results.md
src/candles/: candle.py  predict.py  predictiontree.py
src/candlestick_encoder/: candlestick.py  cse.py  main.py  requirements.txt
src/cs_cpt_predictor/: candle_encoder.py  cpt.py
src/cs_encoder/: console.py  cs_console.py  cs_enc_cmd.py  cs_encoder.py  cs_logger.py  cs_nn.py  cs_plot.py  cs_utils.py  dataprep.py  dataset.py  oh_encoder.py  ohlc_reader.py  onehot_encoder.py  params.py  params.yaml  predict.py  repl.py  ticks.py  (+1 more)
(+54 files in other folders)
