[metadata]
name = lstm_ibex_konk.py
version = 0.1.0.dev
author = Jesus S. Renero
author-email = hergestridge@somewhere.com
summary = Learns from the past and predicts the future.
description-file =
    README.rst
    CHANGES.rst
home-page = http://github.com/renero/
requires-dist = setuptools
classifier =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: IDLE
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Topic :: Scientific/Engineering :: Artificial Intelligence

[files]
packages =
    lstm_ibex_konk.py
    setup.cfg
extra_files =
    CHANGES.rst
    LICENSE
    params.yaml
    ez_setup.py
